--- a/ws2812b_example.ioc
+++ b/ws2812b_example.ioc
@@ -1,13 +1,13 @@
 #MicroXplorer Configuration settings - do not modify
 Dma.Request0=TIM3_CH4/UP
 Dma.RequestsNb=1
-Dma.TIM3_CH4/UP.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.TIM3_CH4/UP.0.Direction=DMA_MEMORY_TO_PERIPH
 Dma.TIM3_CH4/UP.0.Instance=DMA1_Channel3
-Dma.TIM3_CH4/UP.0.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.TIM3_CH4/UP.0.MemInc=DMA_MINC_DISABLE
+Dma.TIM3_CH4/UP.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.TIM3_CH4/UP.0.MemInc=DMA_MINC_ENABLE
 Dma.TIM3_CH4/UP.0.Mode=DMA_CIRCULAR
-Dma.TIM3_CH4/UP.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.TIM3_CH4/UP.0.PeriphInc=DMA_PINC_ENABLE
+Dma.TIM3_CH4/UP.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.TIM3_CH4/UP.0.PeriphInc=DMA_PINC_DISABLE
 Dma.TIM3_CH4/UP.0.Priority=DMA_PRIORITY_LOW
 Dma.TIM3_CH4/UP.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
@@ -92,7 +92,7 @@ ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=ws2812b_example.ioc
 ProjectManager.ProjectName=ws2812b_example
-ProjectManager.RegisterCallBack=
+ProjectManager.RegisterCallBack=TIM
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
@@ -114,7 +114,7 @@ RCC.PLLMCOFreq_Value=48000000
 RCC.PLLMUL=RCC_PLL_MUL6
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.SYSCLKFreq_VALUE=48000000
-RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_HSI48
 RCC.TimSysFreq_Value=48000000
 RCC.USART1Freq_Value=48000000
 RCC.VCOOutput2Freq_Value=8000000
