--- a/ws2812b_example.ioc
+++ b/ws2812b_example.ioc
@@ -11,6 +11,7 @@ Dma.TIM3_CH4/UP.0.PeriphInc=DMA_PINC_DISABLE
 Dma.TIM3_CH4/UP.0.Priority=DMA_PRIORITY_LOW
 Dma.TIM3_CH4/UP.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.Family=STM32F0
 Mcu.IP0=DMA
@@ -22,14 +23,13 @@ Mcu.IP5=USART2
 Mcu.IPNb=6
 Mcu.Name=STM32F042K(4-6)Tx
 Mcu.Package=LQFP32
-Mcu.Pin0=PF0-OSC_IN
-Mcu.Pin1=PA2
-Mcu.Pin2=PB1
-Mcu.Pin3=PA13
-Mcu.Pin4=PA14
-Mcu.Pin5=PA15
-Mcu.Pin6=VP_SYS_VS_Systick
-Mcu.PinsNb=7
+Mcu.Pin0=PA2
+Mcu.Pin1=PB1
+Mcu.Pin2=PA13
+Mcu.Pin3=PA14
+Mcu.Pin4=PA15
+Mcu.Pin5=VP_SYS_VS_Systick
+Mcu.PinsNb=6
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F042K6Tx
@@ -64,11 +64,6 @@ PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PB1.Locked=true
 PB1.Signal=S_TIM3_CH4
-PF0-OSC_IN.GPIOParameters=GPIO_Label
-PF0-OSC_IN.GPIO_Label=MCO
-PF0-OSC_IN.Locked=true
-PF0-OSC_IN.Mode=HSE-External-Clock-Source
-PF0-OSC_IN.Signal=RCC_OSC_IN
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -107,12 +102,11 @@ RCC.FamilyName=M
 RCC.HCLKFreq_Value=48000000
 RCC.HSICECFreq_Value=32786.88524590164
 RCC.I2SFreq_Value=48000000
-RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,CECFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSICECFreq_Value,I2SFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USART1Freq_Value,VCOOutput2Freq_Value
+RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,CECFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSICECFreq_Value,I2SFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USART1Freq_Value,VCOOutput2Freq_Value
 RCC.MCOFreq_Value=48000000
 RCC.PLLCLKFreq_Value=48000000
 RCC.PLLMCOFreq_Value=48000000
 RCC.PLLMUL=RCC_PLL_MUL6
-RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.SYSCLKFreq_VALUE=48000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_HSI48
 RCC.TimSysFreq_Value=48000000
